--- a/templates/admin/manageCourse.html
+++ b/templates/admin/manageCourse.html
@@ -49,7 +49,7 @@
                   </div>
 
                 </div>
-                <a href="{% url "UpdateCourse" %}" class="btn btn-success ">Update</a>
+                <a href="{% url "UpdateCourse" course_id=course.id %}" class="btn btn-success ">Update</a>
               </div>
             </div>
             {% endfor %}
