--- a/templates/admin/manageStudent.html
+++ b/templates/admin/manageStudent.html
@@ -68,7 +68,7 @@
                         {% for student in students %}
                       <tr>
                         <th scope="row">{{ student.admin.id }}</th>
-                        <td>{{ student.profile_pic }}</td>
+                        <td><img src="{{ student.profile_pic }}" style="border-radius: 50px; width:50px; height:50px"></td>
                         <td>{{ student.admin.first_name }}</td>
                         <td>{{ student.admin.last_name }}</td>
                         <td>{{ student.admin.username }}</td>
