--- a/templates/admin/updateCourse.html
+++ b/templates/admin/updateCourse.html
@@ -61,8 +61,9 @@
                     <form class="text-left form-validate" method="POST" action="{% url "EditCourseSave" %}">
                       {% csrf_token %}
                       <div class="form-group-material">
-                        <input id="coursename" type="text" name="coursename" required data-msg="Please enter CourseName" class="input-material">
+                        <input id="coursename" type="text" name="coursename" value="{{ course.course }}" required data-msg="Please enter CourseName" class="input-material">
                         <label for="coursename" class="label-material">CourseName</label>
+                        <input type="hidden" name="course_id" id="course_id" value="{{ course.id }}">
                       </div>
                       
                       <div class="form-group text-center">
