--- a/templates/snippets/sidebar.html
+++ b/templates/snippets/sidebar.html
@@ -6,7 +6,7 @@
           <div class="sidenav-header d-flex align-items-center justify-content-center">
             <!-- User Info-->
             <div class="sidenav-header-inner text-center"><a href="pages-profile.html"><img src="{% static "dashboard/img/avatar-7.jpg" %}" alt="person" class="img-fluid rounded-circle"></a>
-              <h2 class="h5">Nathan Andrews</h2><span>Web Developer</span>
+              <h2 class="h5">{{ user.firstname }} {{ user.lastname }} </h2><span>{{ user.username }}</span>
             </div>
             <!-- Small Brand information, appears on minimized sidebar-->
             <div class="sidenav-header-logo"><a href="index.html" class="brand-small text-center"> <strong>B</strong><strong class="text-primary">D</strong></a></div>
@@ -14,16 +14,55 @@
           <!-- Sidebar Navigation Menus-->
           <div class="main-menu">
             <h5 class="sidenav-heading">Main</h5>
-            <ul id="side-main-menu" class="side-menu list-unstyled">                  
-              <li><a href="{% url "AdminHomePage" %}"> <i class="icon-home"></i>Dashboard</a></li>
-              <li><a href="{% url "AddStaff" %}"> <i class="icon-home"></i>Add Staff</a></li>
-              <li><a href="{% url "ManageStaff" %}"> <i class="icon-home"></i>Manage Staff</a></li>
-              <li><a href="{% url "AddStudent" %}"> <i class="icon-home"></i>Add Student</a></li>
-              <li><a href="{% url "ManageStudent" %}"> <i class="icon-home"></i>Manage Student</a></li>
-              <li><a href="{% url "AddCourse" %}"> <i class="icon-home"></i>Add Course</a></li>
-              <li><a href="{% url "ManageCourse" %}"> <i class="icon-home"></i>Manage Course</a></li>
-              <li><a href="{% url "AddSubject" %}"> <i class="icon-home"></i>Add Subject</a></li>
-              <li><a href="{% url "ManageSubject" %}"> <i class="icon-home"></i>Manage Subject</a></li>
+            <ul id="side-main-menu" class="side-menu list-unstyled">   
+                {% url "AdminHomePage" as AdminHomePage %}               
+              <li class="{% if request.path == AdminHomePage %} active {% endif %}">
+                <a href="{% url "AdminHomePage" %}" class="{% if request.path == AdminHomePage %} active {% endif %}"> <i class=" icon-home"></i>Dashboard</a>
+            </li>
+                
+                {% url 'AddStaff' as AddStaff %}
+                <li class="{% if request.path == AddStaff %} active {% endif %}">
+                  <a href="{{ AddStaff }}" class="{%if request.path == AddStaff %} active {% endif %} href="{% url "AddStaff" %}"> <i class="icon-home"></i>Add Staff</a>
+                </li>
+
+                  {% url 'ManageStaff' as ManageStaff  %}
+                  {% url 'UpdateStaff' staff_id=id as UpdateStaff  %}
+                <li class="{% if request.path == ManageStaff %} active {% endif %}{% if request.path == UpdateStaff %} active {% endif %}">
+                  <a href="{% url "ManageStaff" %}"> <i class="{%if request.path  == ManageStaff %} active {% endif %} icon-home"></i>Manage Staff</a>
+                </li>
+
+                {% url "AddStudent" as AddStudent %}
+                <li class="{% if request.path == AddStudent %} active {% endif %}">
+                  <a href="{% url "AddStudent" %}"> <i class="{%if request.path == AddStudent %} active {% endif %} icon-home"></i>Add Student</a>
+                </li>
+
+                {% url 'ManageStudent' as ManageStudent  %}
+                {% url 'UpdateStudent' student_id=id as UpdateStudent  %}
+              <li class="{% if request.path == ManageStudent %} active {% endif %}{% if request.path == UpdateStudent %} active {% endif %}">
+                  <a href="{% url "ManageStudent" %}"> <i class="{%if request.path == ManageStudent %} active {% endif %} icon-home"></i>Manage Student</a>
+                </li>
+                
+                {% url "AddCourse" as AddCourse %}
+              <li class="{% if request.path == AddCourse %} active {% endif %}">
+                  <a href="{% url "AddCourse" %}"> <i class="{%if request.path == AddCourse %} active {% endif %} icon-home"></i>Add Course</a>
+                </li>
+
+                {% url 'ManageCourse' as ManageCourse  %}
+                {% url 'UpdateCourse' course_id=id as UpdateCourse  %}
+              <li class="{% if request.path == ManageCourse %} active {% endif %}{% if request.path == UpdateCourse %} active {% endif %}">
+                  <a href="{% url "ManageCourse" %}"> <i class="{% if request.path == ManageCourse %} active {% endif %} icon-home"></i>Manage Course</a>
+                </li>
+
+                {% url "AddStuject" as AddSubject %}
+              <li class="{% if request.path == AddStudent %} active {% endif %}">
+                  <a href="{% url "AddSubject" %}"> <i class="{%if request.path == AddSubject %} active {% endif %} icon-home"></i>Add Subject</a>
+                </li>
+
+                {% url 'ManageSubject' as ManageSubject %}
+                {% url 'UpdateSubject' subject_id=id as UpdateSubject %}
+              <li class="{%if request.path == ManageSubject %} active {% endif %}{%if request.path == UpdateSubject %} active {% endif %}">
+                  <a href="{% url "ManageSubject" %}"> <i class="{%if request.path == ManageSubject %} active {% endif %} icon-home"></i>Manage Subject</a>
+                </li>
               <li><a href="index.html"> <i class="icon-home"></i>Veiw Attendance</a></li>
               <li><a href="index.html"> <i class="icon-home"></i>Staff Leave</a></li>
               <li><a href="index.html"> <i class="icon-home"></i>Student Leave </a></li>
