--- a/templates/staff/home.html
+++ b/templates/staff/home.html
@@ -31,7 +31,7 @@
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
   </head>
   <body>
-      {% include "snippets/sidebar.html" with user=user id=id %}
+      {% include "staff/sidebar.html" with user=user id=id %}
         <div class="page">
         <!-- navbar-->
         {% include "snippets/header.html" %}
