--- a/templates/admin/updateLevel.html
+++ b/templates/admin/updateLevel.html
@@ -24,9 +24,6 @@
     <link rel="stylesheet" href="{% static "dashboard/css/style.default.premium.css" %}" id="theme-stylesheet">
     <!-- Custom stylesheet - for your changes-->
     <link rel="stylesheet" href="{% static "dashboard/css/custom.css" %}">
-    <!-- DataTables CSS-->
-    <link rel="stylesheet" href="{% static "dashboard/vendor/datatables.net-bs4/css/dataTables.bootstrap4.css" %}">
-    <link rel="stylesheet" href="{% static "dashboard/vendor/datatables.net-responsive-bs4/css/responsive.bootstrap4.min.css" %}">
     <!-- Favicon-->
     <link rel="shortcut icon" href="{% static "dashboard/img/favicon.ico" %}">
     <!-- Tweaks for older IEs--><!--[if lt IE 9]>
@@ -38,55 +35,52 @@
         <div class="page">
         <!-- navbar-->
         {% include "snippets/header.html" %}
-        <br>
-        <div class="col-lg-12">
-            <div class="card">
-              <div class="card-header">
-                <h4>Striped Table</h4>
-              </div>
-              <div class="card-body">
-                <div class="table">
-                  <table class=" table table-striped table-hover">
-                    <thead>
-                      <tr>
-                        <th>ID</th>
-                        <th>Profile Pic</th>
-                        <th>First Name</th>
-                        <th>Last Name</th>
-                        <th>Username</th>
-                        <th>Email</th>
-                        <th>Course</th>
-                        <th>Address</th>
-                        <th>Gender</th>
-                        <th>Date Joined</th>
-                        <th>Last Login</th>
-                        <th>Level</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                        {% for student in students %}
-                      <tr>
-                        <th scope="row">{{ student.admin.id }}</th>
-                        <td><img src="{{ student.profile_pic }}" style="border-radius: 50px; width:50px; height:50px"></td>
-                        <td>{{ student.admin.first_name }}</td>
-                        <td>{{ student.admin.last_name }}</td>
-                        <td>{{ student.admin.username }}</td>
-                        <td>{{ student.admin.email }}</td>
-                        <td>{{ student.course_id.course }}</td>
-                        <td>{{ student.address }}</td>
-                        <td>{{ student.gender }}</td>
-                        <td>{{ student.admin.date_joined }}</td>
-                        <td>{{ student.admin.last_login }}</td>
-                        <td>{{ student.level.level }}</td>
-                        <td><a class="btn-success btn btn-sm" href="{% url "UpdateStudent" student_id=student.admin.id  %}">Update </a></td>
-                      </tr>
-                      {% endfor %}
-                    </tbody>
-                  </table>
+        
+        <!-- Statistics Section-->
+        <section class="statistics">
+            <div class="container-fluid">
+            <div class="row d-flex">
+                <div class="col-lg-1">
                 </div>
-              </div>
+                <div class="col-lg-10">
+                  <br>
+                  <div class="form-inner">
+                    <div class="logo text-uppercase"><span>Dash</span><strong class="text-primary">Express</strong></div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+                      {% if messages %}
+                          {% for message in messages %}
+                          {% if message.tags == 'success' %}
+                            <span id="demoMessage4" class="btn btn-success">{{message}}</span>
+                          {% endif %}
+                          {% if message.tags == 'error' %}
+                            <span id="demoMessage4" class="btn btn-danger">{{message}}</span>
+                          {% endif %}
+                          {% endfor %}
+                      {% endif %}
+                    <br>
+                    <form class="text-left form-validate" method="POST" action="{% url "EditCourseSave" %}">
+                      {% csrf_token %}
+                      <div class="form-group-material">
+                        <input id="coursename" type="text" name="coursename" value="{{ course.course }}" required data-msg="Please enter CourseName" class="input-material">
+                        <label for="coursename" class="label-material">CourseName</label>
+                        <input type="hidden" name="course_id" id="course_id" value="{{ course.id }}">
+                      </div>
+                      
+                      <div class="form-group text-center">
+                        <input id="register" type="submit" value="Add Course" class="btn btn-primary">
+                      </div>
+
+                      
+                    </form>
+                    
+                  </div>
+                </div>
+                <div class="col-lg-1">
+                </div>
             </div>
-          </div>
+            </div>
+        </section>
+
         {% include "snippets/footer.html" %}
         </div>
       <!-- JavaScript files-->
@@ -102,12 +96,6 @@
       <script src="{% static "dashboard/vendor/messenger-hubspot/build/js/messenger.min.js" %}">   </script>
       <script src="{% static "dashboard/vendor/messenger-hubspot/build/js/messenger-theme-flat.js" %}">       </script>
       <script src="{% static "dashboard/js/home-premium.js" %}"> </script>
-      <!-- Data Tables-->
-        <script src="{% static "dashboard/vendor/datatables.net/js/jquery.dataTables.js" %}"></script>
-        <script src="{% static "dashboard/vendor/datatables.net-bs4/js/dataTables.bootstrap4.js" %}"></script>
-        <script src="{% static "dashboard/vendor/datatables.net-responsive/js/dataTables.responsive.min.js" %}"></script>
-        <script src="{% static "dashboard/vendor/datatables.net-responsive-bs4/js/responsive.bootstrap4.min.js" %}"></script>
-        <script src="{% static "dashboard/js/tables-datatable.js" %}"></script>
       <!-- Main File-->
       <script src="{% static "dashboard/js/front.js" %}"></script>
     </body>
