--- a/templates/staff/sidebar.html
+++ b/templates/staff/sidebar.html
@@ -19,6 +19,10 @@
           <li class="{% if request.path == StaffHomePage %} active {% endif %}">
             <a href="{% url "StaffHomePage" %}" class="{% if request.path == StaffHomePage %} active {% endif %}"> <i class=" icon-home"></i>Dashboard</a>
         </li>
+                {% url "AttendanceStudent" as AttendanceStudent %}
+              <li class="{% if request.path == AttendanceStudent %} active {% endif %}">
+                  <a href="{% url "AttendanceStudent" %}"> <i class="{%if request.path == AttendanceStudent %} active {% endif %} icon-home"></i> Student Attendance</a>
+                </li>
             
           <li><a href="index.html"> <i class="icon-home"></i>Veiw Attendance</a></li>
           <li><a href="index.html"> <i class="icon-home"></i>Staff Leave</a></li>
