--- a/templates/staff/feedback.html
+++ b/templates/staff/feedback.html
@@ -31,7 +31,7 @@
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
   </head>
   <body>
-      {% include "staff/sidebar.html" with user=user id=id %}
+      {% include "staff/sidebar.html" %}
         <div class="page">
         <!-- navbar-->
         {% include "snippets/header.html" %}
@@ -40,41 +40,69 @@
         <section class="statistics">
             <div class="container-fluid">
             <div class="row d-flex">
-                <div class="col-lg-4">
-                <!-- Income-->
-                <div class="card income text-center">
-                    <div class="icon"><i class="icon-line-chart"></i></div>
-                    <div class="number">126,418</div><strong class="text-primary">All Income</strong>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                <div class="col-lg-1">
                 </div>
-                </div>
-                <div class="col-lg-4">
-                <!-- Monthly Usage-->
-                <div class="card data-usage">
-                    <h2 class="display h4">Monthly Usage</h2>
-                    <div class="row d-flex align-items-center">
-                    <div class="col-sm-6">
-                        <div id="progress-circle" class="d-flex align-items-center justify-content-center"></div>
+                <div class="col-lg-10">
+                  <br>
+                  <div class="form-inner">
+                    <div class="logo text-uppercase"><span>Dash</span><strong class="text-primary">Express</strong></div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+                      {% if messages %}
+                          {% for message in messages %}
+                          {% if message.tags == 'success' %}
+                            <span id="demoMessage4" class="btn btn-success">{{message}}</span>
+                          {% endif %}
+                          {% if message.tags == 'error' %}
+                            <span id="demoMessage4" class="btn btn-danger">{{message}}</span>
+                          {% endif %}
+                          {% endfor %}
+                      {% endif %}
+                    <br>
+                    <form class="text-left form-validate" method="POST" action="{% url "FeedbackSave" %}">
+                        {% csrf_token %}
+                      <div class="form-group-material">
+                        <label for="level" class="label-material">FeedBack Message</label>
+                        <textarea name="feedback_message" id="feedback_message" cols="30" rows="6" class="form-control" required data-msg='Please State FeedBack Message '></textarea>
+                      </div>
+
+
+                      <div class="form-group text-center">
+                        <input id="fetch_student" type="submit" value="Post FeedBack" class="btn btn-primary">
+                      </div>
+                    </form>
+                    
+                    <br><br>
+                    <div class="form-inner">
+                    <div class="logo text-uppercase"><span>Dash</span><strong class="text-primary">Express</strong></div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+                    <br><br>
                     </div>
-                    <div class="col-sm-6"><strong class="text-primary">80.56 Gb</strong><small>Current Plan</small><span>100 Gb Monthly</span></div>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+                    
+                    <div class="table">
+                        <table class=" table table-striped table-hover">
+                          <thead>
+                            <tr>
+                              <th>ID</th>
+                              <th> FeedBack</th>
+                              <th>FeedBack Reply</th>
+                              <th>Date Sent</th>
+                            </tr>
+                          </thead>
+                          <tbody>
+                              {% for feed in feedback_data %}
+                            <tr>
+                              <th scope="row">{{ feed.id }}</th>
+                              <td>{{ feed.feedback }}</td>
+                              <td>{{ feed.feedback_reply }}</td>
+                              <td>{{ feed.created }}</td>
+                            </tr>
+                            {% endfor %}
+                          </tbody>
+                        </table>
+                      </div>
+                  </div>
                 </div>
-                </div>
-                <div class="col-lg-4">
-                <!-- User Actibity-->
-                <div class="card user-activity">
-                    <h2 class="display h4">User Activity</h2>
-                    <div class="number">210</div>
-                    <h3 class="h4 display">Social Users</h3>
-                    <div class="progress">
-                    <div role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" class="progress-bar progress-bar bg-primary"></div>
-                    </div>
-                    <div class="page-statistics d-flex justify-content-between">
-                    <div class="page-statistics-left"><span>Pages Visits</span><strong>230</strong></div>
-                    <div class="page-statistics-right"><span>New Visits</span><strong>73.4%</strong></div>
-                    </div>
-                </div>
+                <div class="col-lg-1">
                 </div>
             </div>
             </div>
@@ -97,5 +125,6 @@
       <script src="{% static "dashboard/js/home-premium.js" %}"> </script>
       <!-- Main File-->
       <script src="{% static "dashboard/js/front.js" %}"></script>
+   
     </body>
 </html>
