--- a/templates/staff/leaveApply.html
+++ b/templates/staff/leaveApply.html
@@ -66,17 +66,47 @@
                       </div>
                       <div class="form-group-material">
                         <label for="level" class="label-material">Reason For Leave</label>
-                        <textarea name="reason" id="reason" cols="30" rows="6" class="form-control"></textarea>
+                        <textarea name="reason" id="reason" cols="30" rows="6" class="form-control" required data-msg='Please State Reason '></textarea>
                       </div>
 
 
                       <div class="form-group text-center">
                         <input id="fetch_student" type="submit" value="Submit Application" class="btn btn-primary">
                       </div>
-                    </for>
-                     <div id="student_data">
-                       
-                     </div>
+                    </form>
+                    
+                    <br><br>
+                    <div class="form-inner">
+                    <div class="logo text-uppercase"><span>Dash</span><strong class="text-primary">Express</strong></div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+                    <br><br>
+                    </div>
+                    <div class="row ml-1 mr-1">
+                        {% for leave in leave_data %}
+                        <div class="col-md-6 col-xl-4">                       
+                          <div class="card">
+                            <div class="card-body">
+                              <div class="media align-items-center"><span style="background-image: url(img/avatar-8.jpg)" class="avatar avatar-xl mr-3"></span>
+                                <div class="media-body overflow-hidden">
+                                  <p class="card-text text-uppercase text-bold">Leave Date</p>
+                                  <p class="card-text text-uppercase">{{ leave.leave_date }}</p>
+                                  <p class="card-text text-uppercase text-bold">Reason</p>
+                                  <p class="card-text text-uppercase">{{ leave.leave_message }}</p>
+                                </div>
+                              </div>
+                            </div>
+                             {% if leave.leave_status == 1 %}
+                                <a href="#" class="btn btn-success">Approved</a>
+                             {% elif leave.leave_status == 2%}
+                                <a href="#" class="btn btn-danger">Rejected</a>
+                             {% else %}
+                                    <a href="#" class="btn btn-info">Pending</a>
+                             {% endif %}
+
+                            </div>
+                        </div>
+                        {% endfor %}
+                    </div>
                     
                   </div>
                 </div>
