--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -60,7 +60,8 @@
                 {% endif %}
                 {% endfor %}
             {% endif %}
-            <a href="#" class="forgot-pass">Forgot Password?</a><small>Do not have an account? </small><a href="register.html" class="signup">Signup</a>
+            <a href="{% url "password_reset" %}" class="forgot-pass">Forgot Password?</a>
+            <small>Do not have an account? </small><a href="register.html" class="signup">Signup</a>
           </div>
           <div class="copyrights text-center">
             <p>Design by <a href="#" class="external">IntellHights &circledR;2020</a>                        </p>
