--- a/templates/admin/staffFeedback.html
+++ b/templates/admin/staffFeedback.html
@@ -31,7 +31,7 @@
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
   </head>
   <body>
-      {% include "student/sidebar.html" %}
+      {% include "snippets/sidebar.html" %}
         <div class="page">
         <!-- navbar-->
         {% include "snippets/header.html" %}
@@ -58,19 +58,39 @@
                           {% endfor %}
                       {% endif %}
                     <br>
-                    <form class="text-left form-validate" method="POST" action="{% url "FeedbackSaveStudent" %}">
-                        {% csrf_token %}
-                      <div class="form-group-material">
-                        <label for="level" class="label-material">FeedBack Message</label>
-                        <textarea name="feedback_message" id="feedback_message" cols="30" rows="6" class="form-control" required data-msg='Please State FeedBack Message '></textarea>
-                      </div>
-
-
-                      <div class="form-group text-center">
-                        <input id="fetch_student" type="submit" value="Post FeedBack" class="btn btn-primary">
-                      </div>
-                    </form>
+ 
                     
+                     <!-- Modal -->
+                     <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalCenterTitle">Reply To: <span id="reply_name"></span> Feedback</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                            </div>
+                            <div class="modal-body">
+                                <form class="text-left form-validate" method="POST" action="{% url "FeedbackSaveStudent" %}">
+                                    {% csrf_token %}
+                                    <input type="hidden" id="reply_id" name="reply_id">
+                                  <div class="form-group-material">
+                                    <label for="level" class="label-material">FeedBack Reply</label>
+                                    <textarea name="feedback_message" id="feedback_message" cols="30" rows="6" class="form-control" required data-msg='Please State FeedBack Message '></textarea>
+                                  </div>
+            
+            
+                                  <div class="form-group text-center">
+                                    <input id="reply_feedback" type="submit" value="Post FeedBack" class="btn btn-primary">
+                                  </div>
+                                </form>
+                            </div>
+                            <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
                     <br><br>
                     <div class="form-inner">
                     <div class="logo text-uppercase"><span>Dash</span><strong class="text-primary">Express</strong></div>
@@ -83,18 +103,29 @@
                           <thead>
                             <tr>
                               <th>ID</th>
-                              <th> FeedBack</th>
-                              <th>FeedBack Reply</th>
                               <th>Date Sent</th>
+                              <th>Name</th>
+                              <th> FeedBack Message</th>
+                              <th>FeedBack Reply</th>
                             </tr>
                           </thead>
                           <tbody>
                               {% for feed in feedback_data %}
                             <tr>
                               <th scope="row">{{ feed.id }}</th>
-                              <td>{{ feed.feedback }}</td>
-                              <td>{{ feed.feedback_reply }}</td>
                               <td>{{ feed.created }}</td>
+                              <td>{{ feed.staff_id.admin.first_name }} {{ feed.staff_id.admin.last_name }}</td>
+                              <td>{{ feed.feedback }}</td>
+                              <td>
+                                  {% if feed.feedback_reply == "" %}
+                                    <!-- Button trigger modal -->
+                                    <button type="button" class="btn btn-primary reply_open_modal" data-toggle="modal" data-target="#exampleModalCenter">
+                                        Reply Feedback
+                                    </button>
+                                   {% else %}                                      
+                                    {{ feed.feedback_reply }}
+                                  {% endif %}
+                              </td>
                             </tr>
                             {% endfor %}
                           </tbody>
@@ -125,5 +156,45 @@
       <script src="{% static "dashboard/js/home-premium.js" %}"> </script>
       <!-- Main File-->
       <script src="{% static "dashboard/js/front.js" %}"></script>
-</body>
+      <script>
+        $(document).ready(function(){
+            $(".reply_open_modal").click(function(){
+                var id = $(this).parents("tr").children("th:eq(0)").text();
+                var name = $(this).parents("tr").children("td:eq(1)").text();
+                console.log(id)
+                console.log(name)
+                $("#reply_id").val(id);
+                $("#reply_name").text(name);
+            });
+
+            $(document).on("click", "#reply_feedback", function(){
+
+                $(this).attr("disabled", "disabled");
+                $(this).text("Sending Feedback Reply..");
+
+                var id = $("#reply_id").val();
+                var name = $("#reply_name").val();
+                var message = $("#feedback_message").val();
+
+                $.ajax({
+                  url: '{% url "StaffFeedbackReply" %}',
+                  type: "POST",
+                  data: {id:id, message:message, name:name},
+                })
+                .done(function(response){
+                  if(response == "True"){
+                    alert("Feedback Reply Sent")
+                  }
+                  else{
+                    alert("Error Sending Feedback Reply")
+                  }
+                  location.reload()
+                })
+                .fail(function(){
+                  alert("Error Sending Feedback Reply")
+                })
+              })
+            })
+    </script>
+    </body>
 </html>
