--- a/templates/snippets/sidebar.html
+++ b/templates/snippets/sidebar.html
@@ -6,7 +6,9 @@
           <div class="sidenav-header d-flex align-items-center justify-content-center">
             <!-- User Info-->
             <div class="sidenav-header-inner text-center"><a href="pages-profile.html"><img src="{% static "dashboard/img/avatar-7.jpg" %}" alt="person" class="img-fluid rounded-circle"></a>
-              <h2 class="h5">{{ user.firstname }} {{ user.lastname }} </h2><span>{{ user.username }}</span>
+              <h2 class="h5">{{ request.user.first_name }} {{ request.user.last_name }} </h2><span>{{ request.user.username }}</span>
+              <br>
+              <a href="{% url "UserProfile" %}" class="btn btn-success btn-block">Update Profile</a>
             </div>
             <!-- Small Brand information, appears on minimized sidebar-->
             <div class="sidenav-header-logo"><a href="index.html" class="brand-small text-center"> <strong>B</strong><strong class="text-primary">D</strong></a></div>
