admin dashboard updated

--- a/templates/admin/addStudent.html
+++ b/templates/admin/addStudent.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Bootstrap Dashboard by Bootstrapious.com</title>
+    <title>Brintschool | Add Student</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -45,7 +45,7 @@
                 <div class="col-lg-10">
                   <br>
                   <div class="form-inner">
-                    <div class="logo text-uppercase"><span>Dash</span><strong class="text-primary">Express</strong></div>
+                    <div class="logo text-uppercase"><span>Brint</span><strong class="text-primary">School</strong></div>                  
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
                       {% if messages %}
                           {% for message in messages %}
