--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -3,10 +3,10 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-sm-6">
-              <p>Your company &copy; 2017-2020</p>
+              <p>Online@brintschools.com | +234 913 266 8015</p>
             </div>
             <div class="col-sm-6 text-right">
-              <p>Version 1.4.7</p>
+              <p>&copy; 2023 by Brint Online School</p>
             </div>
           </div>
         </div>
