--- a/templates/admin/addLevel.html
+++ b/templates/admin/addLevel.html
@@ -1,101 +1,106 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Bootstrap Dashboard by Bootstrapious.com</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="robots" content="all,follow">
-    <!-- Bootstrap CSS-->
-    <link rel="stylesheet" href="{% static "dashboard/vendor/bootstrap/css/bootstrap.min.css" %}">
-    <!-- Font Awesome CSS-->
-    <link rel="stylesheet" href="{% static "dashboard/vendor/font-awesome/css/font-awesome.min.css" %}">
-    <!-- Fontastic Custom icon font-->
-    <link rel="stylesheet" href="{% static "dashboard/css/fontastic.css" %}">
-    <!-- Google fonts - Roboto -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
-    <!-- jQuery Circle-->
-    <link rel="stylesheet" href="{% static "dashboard/css/grasp_mobile_progress_circle-1.0.0.min.css" %}">
-    <!-- Custom Scrollbar-->
-    <link rel="stylesheet" href="{% static "dashboard/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css" %}">
-    <!-- theme stylesheet-->
-    <link rel="stylesheet" href="{% static "dashboard/css/style.default.premium.css" %}" id="theme-stylesheet">
-    <!-- Custom stylesheet - for your changes-->
-    <link rel="stylesheet" href="{% static "dashboard/css/custom.css" %}">
-    <!-- Favicon-->
-    <link rel="shortcut icon" href="{% static "dashboard/img/favicon.ico" %}">
-    <!-- Tweaks for older IEs--><!--[if lt IE 9]>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Brintschool | Add Subscription</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="robots" content="all,follow">
+  <!-- Bootstrap CSS-->
+  <link rel="stylesheet" href="{% static " dashboard/vendor/bootstrap/css/bootstrap.min.css" %}">
+  <!-- Font Awesome CSS-->
+  <link rel="stylesheet" href="{% static " dashboard/vendor/font-awesome/css/font-awesome.min.css" %}">
+  <!-- Fontastic Custom icon font-->
+  <link rel="stylesheet" href="{% static " dashboard/css/fontastic.css" %}">
+  <!-- Google fonts - Roboto -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
+  <!-- jQuery Circle-->
+  <link rel="stylesheet" href="{% static " dashboard/css/grasp_mobile_progress_circle-1.0.0.min.css" %}">
+  <!-- Custom Scrollbar-->
+  <link rel="stylesheet" href="{% static " dashboard/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css"
+    %}">
+  <!-- theme stylesheet-->
+  <link rel="stylesheet" href="{% static " dashboard/css/style.default.premium.css" %}" id="theme-stylesheet">
+  <!-- Custom stylesheet - for your changes-->
+  <link rel="stylesheet" href="{% static " dashboard/css/custom.css" %}">
+  <!-- Favicon-->
+  <link rel="shortcut icon" href="{% static " dashboard/img/favicon.ico" %}">
+  <!-- Tweaks for older IEs--><!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
-  </head>
-  <body>
-      {% include "snippets/sidebar.html" %}
-        <div class="page">
-        <!-- navbar-->
-        {% include "snippets/header.html" %}
-        
-        <!-- Statistics Section-->
-        <section class="statistics">
-            <div class="container-fluid">
-            <div class="row d-flex">
-                <div class="col-lg-1">
-                </div>
-                <div class="col-lg-10">
-                  <br>
-                  <div class="form-inner">
-                    <div class="logo text-uppercase"><span>Dash</span><strong class="text-primary">Express</strong></div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
-                      {% if messages %}
-                          {% for message in messages %}
-                          {% if message.tags == 'success' %}
-                            <span id="demoMessage4" class="btn btn-success">{{message}}</span>
-                          {% endif %}
-                          {% if message.tags == 'error' %}
-                            <span id="demoMessage4" class="btn btn-danger">{{message}}</span>
-                          {% endif %}
-                          {% endfor %}
-                      {% endif %}
-                    <br>
-                    <form class="text-left form-validate" method="POST" action="{% url "AddLevelSave" %}">
-                      {% csrf_token %}
-                      <div class="form-group-material">
-                        <input id="level" type="text" name="level" required data-msg="Please enter level" class="input-material">
-                        <label for="level" class="label-material">Level</label>
-                      </div>
-                      
-                      <div class="form-group text-center">
-                        <input id="register" type="submit" value="Add Course" class="btn btn-primary">
-                      </div>
+</head>
 
-                      
-                    </form>
-                    
-                  </div>
-                </div>
-                <div class="col-lg-1">
-                </div>
-            </div>
-            </div>
-        </section>
+<body>
+  {% include "snippets/sidebar.html" %}
+  <div class="page">
+    <!-- navbar-->
+    {% include "snippets/header.html" %}
 
-        {% include "snippets/footer.html" %}
+    <!-- Statistics Section-->
+    <section class="statistics">
+      <div class="container-fluid">
+        <div class="row d-flex">
+          <div class="col-lg-1">
+          </div>
+          <div class="col-lg-10">
+            <br>
+            <div class="form-inner">
+              <div class="logo text-uppercase"><span>Brint</span><strong class="text-primary">School</strong></div>
+              <p>online school management platform</p>
+
+              {% if message.tags == 'success' %}
+              <span id="demoMessage4" class="btn btn-success">{{message}}</span>
+              {% endif %}
+              {% if message.tags == 'error' %}
+              <span id="demoMessage4" class="btn btn-danger">{{message}}</span>
+              {% endif %}
+              {% endfor %}
+              {% endif %}
+              <br>
+              <form class="text-left form-validate" method="POST" action="{% url " AddLevelSave" %}">
+                {% csrf_token %}
+                <div class="form-group-material">
+                  <input id="level" type="text" name="level" required data-msg="Please enter level"
+                    class="input-material">
+                  <label for="level" class="label-material">Level</label>
+                </div>
+
+                <div class="form-group text-center">
+                  <input id="register" type="submit" value="Add Course" class="btn btn-primary">
+                </div>
+
+
+              </form>
+
+            </div>
+          </div>
+          <div class="col-lg-1">
+          </div>
         </div>
-      <!-- JavaScript files-->
-      <script src="{% static "dashboard/vendor/jquery/jquery.min.js" %}"></script>
-      <script src="{% static "dashboard/vendor/bootstrap/js/bootstrap.bundle.min.js" %}"></script>
-      <script src="{% static "dashboard/vendor/jquery.cookie/jquery.cookie.js" %}"> </script>
-      <script src="{% static "dashboard/js/grasp_mobile_progress_circle-1.0.0.min.js" %}"></script>
-      <script src="{% static "dashboard/vendor/chart.js/Chart.min.js" %}"></script>
-      <script src="{% static "dashboard/vendor/jquery-validation/jquery.validate.min.js" %}"></script>
-      <script src="{% static "dashboard/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js" %}"></script>
-      <script src="{% static "dashboard/js/charts-home.js" %}"></script>
-      <!-- Notifications-->
-      <script src="{% static "dashboard/vendor/messenger-hubspot/build/js/messenger.min.js" %}">   </script>
-      <script src="{% static "dashboard/vendor/messenger-hubspot/build/js/messenger-theme-flat.js" %}">       </script>
-      <script src="{% static "dashboard/js/home-premium.js" %}"> </script>
-      <!-- Main File-->
-      <script src="{% static "dashboard/js/front.js" %}"></script>
-    </body>
+      </div>
+    </section>
+
+    {% include "snippets/footer.html" %}
+  </div>
+  <!-- JavaScript files-->
+  <script src="{% static " dashboard/vendor/jquery/jquery.min.js" %}"></script>
+  <script src="{% static " dashboard/vendor/bootstrap/js/bootstrap.bundle.min.js" %}"></script>
+  <script src="{% static " dashboard/vendor/jquery.cookie/jquery.cookie.js" %}"> </script>
+  <script src="{% static " dashboard/js/grasp_mobile_progress_circle-1.0.0.min.js" %}"></script>
+  <script src="{% static " dashboard/vendor/chart.js/Chart.min.js" %}"></script>
+  <script src="{% static " dashboard/vendor/jquery-validation/jquery.validate.min.js" %}"></script>
+  <script src="{% static " dashboard/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"
+    %}"></script>
+  <script src="{% static " dashboard/js/charts-home.js" %}"></script>
+  <!-- Notifications-->
+  <script src="{% static " dashboard/vendor/messenger-hubspot/build/js/messenger.min.js" %}">   </script>
+  <script src="{% static " dashboard/vendor/messenger-hubspot/build/js/messenger-theme-flat.js" %}">       </script>
+  <script src="{% static " dashboard/js/home-premium.js" %}"> </script>
+  <!-- Main File-->
+  <script src="{% static " dashboard/js/front.js" %}"></script>
+</body>
+
 </html>
