--- a/templates/admin/addStaff.html
+++ b/templates/admin/addStaff.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Dash Express | Add Staff</title>
+    <title>Brintschool | Add Staff</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -45,7 +45,7 @@
                 <div class="col-lg-10">
                   <br>
                   <div class="form-inner">
-                    <div class="logo text-uppercase"><span>Dash</span><strong class="text-primary">Express</strong></div>
+                    <div class="logo text-uppercase"><span>Brint</span><strong class="text-primary">School</strong></div>
                     <p>Add new staffs to the staffs lists.</p>
                       {% if messages %}
                           {% for message in messages %}
@@ -83,6 +83,10 @@
                       <div class="form-group-material">
                         <input id="address" type="text" name="address" required data-msg="Please enter Staff Address" class="input-material">
                         <label for="address" class="label-material">Address</label>
+                      </div>
+                      <div class="form-group-material">
+                        <input id="link" type="text" name="link" required data-msg="Please enter Staff Meeting Link" class="input-material">
+                        <label for="link" class="label-material">Link</label>
                       </div>
                       
                       <div class="form-group text-center">
