--- a/templates/admin/manageStudent.html
+++ b/templates/admin/manageStudent.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Bootstrap Dashboard by Bootstrapious.com</title>
+    <title>Brintschool | Manage Student</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -42,7 +42,6 @@
         <div class="col-lg-12">
             <div class="card">
               <div class="card-header">
-                <h4>Striped Table</h4>
               </div>
               <div class="card-body">
                 <div class="table">
@@ -60,7 +59,7 @@
                         <th>Gender</th>
                         <th>Date Joined</th>
                         <th>Last Login</th>
-                        <th>Level</th>
+                        <th>Subscription</th>
                       </tr>
                     </thead>
                     <tbody>
