--- a/templates/admin/staffFeedback.html
+++ b/templates/admin/staffFeedback.html
@@ -1,200 +1,208 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Bootstrap Dashboard by Bootstrapious.com</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="robots" content="all,follow">
-    <!-- Bootstrap CSS-->
-    <link rel="stylesheet" href="{% static "dashboard/vendor/bootstrap/css/bootstrap.min.css" %}">
-    <!-- Font Awesome CSS-->
-    <link rel="stylesheet" href="{% static "dashboard/vendor/font-awesome/css/font-awesome.min.css" %}">
-    <!-- Fontastic Custom icon font-->
-    <link rel="stylesheet" href="{% static "dashboard/css/fontastic.css" %}">
-    <!-- Google fonts - Roboto -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
-    <!-- jQuery Circle-->
-    <link rel="stylesheet" href="{% static "dashboard/css/grasp_mobile_progress_circle-1.0.0.min.css" %}">
-    <!-- Custom Scrollbar-->
-    <link rel="stylesheet" href="{% static "dashboard/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css" %}">
-    <!-- theme stylesheet-->
-    <link rel="stylesheet" href="{% static "dashboard/css/style.default.premium.css" %}" id="theme-stylesheet">
-    <!-- Custom stylesheet - for your changes-->
-    <link rel="stylesheet" href="{% static "dashboard/css/custom.css" %}">
-    <!-- Favicon-->
-    <link rel="shortcut icon" href="{% static "dashboard/img/favicon.ico" %}">
-    <!-- Tweaks for older IEs--><!--[if lt IE 9]>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Brintschool | Staff Feedback</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="robots" content="all,follow">
+  <!-- Bootstrap CSS-->
+  <link rel="stylesheet" href="{% static " dashboard/vendor/bootstrap/css/bootstrap.min.css" %}">
+  <!-- Font Awesome CSS-->
+  <link rel="stylesheet" href="{% static " dashboard/vendor/font-awesome/css/font-awesome.min.css" %}">
+  <!-- Fontastic Custom icon font-->
+  <link rel="stylesheet" href="{% static " dashboard/css/fontastic.css" %}">
+  <!-- Google fonts - Roboto -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
+  <!-- jQuery Circle-->
+  <link rel="stylesheet" href="{% static " dashboard/css/grasp_mobile_progress_circle-1.0.0.min.css" %}">
+  <!-- Custom Scrollbar-->
+  <link rel="stylesheet" href="{% static " dashboard/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css"
+    %}">
+  <!-- theme stylesheet-->
+  <link rel="stylesheet" href="{% static " dashboard/css/style.default.premium.css" %}" id="theme-stylesheet">
+  <!-- Custom stylesheet - for your changes-->
+  <link rel="stylesheet" href="{% static " dashboard/css/custom.css" %}">
+  <!-- Favicon-->
+  <link rel="shortcut icon" href="{% static " dashboard/img/favicon.ico" %}">
+  <!-- Tweaks for older IEs--><!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
-  </head>
-  <body>
-      {% include "snippets/sidebar.html" %}
-        <div class="page">
-        <!-- navbar-->
-        {% include "snippets/header.html" %}
-        
-        <!-- Statistics Section-->
-        <section class="statistics">
-            <div class="container-fluid">
-            <div class="row d-flex">
-                <div class="col-lg-1">
-                </div>
-                <div class="col-lg-10">
-                  <br>
-                  <div class="form-inner">
-                    <div class="logo text-uppercase"><span>Dash</span><strong class="text-primary">Express</strong></div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
-                      {% if messages %}
-                          {% for message in messages %}
-                          {% if message.tags == 'success' %}
-                            <span id="demoMessage4" class="btn btn-success">{{message}}</span>
-                          {% endif %}
-                          {% if message.tags == 'error' %}
-                            <span id="demoMessage4" class="btn btn-danger">{{message}}</span>
-                          {% endif %}
-                          {% endfor %}
-                      {% endif %}
-                    <br>
- 
-                    
-                     <!-- Modal -->
-                     <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalCenterTitle">Reply To: <span id="reply_name"></span> Feedback</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                            </div>
-                            <div class="modal-body">
-                                <form class="text-left form-validate" method="POST" action="{% url "FeedbackSaveStudent" %}">
-                                    {% csrf_token %}
-                                    <input type="hidden" id="reply_id" name="reply_id">
-                                  <div class="form-group-material">
-                                    <label for="level" class="label-material">FeedBack Reply</label>
-                                    <textarea name="feedback_message" id="feedback_message" cols="30" rows="6" class="form-control" required data-msg='Please State FeedBack Message '></textarea>
-                                  </div>
-            
-            
-                                  <div class="form-group text-center">
-                                    <input id="reply_feedback" type="submit" value="Post FeedBack" class="btn btn-primary">
-                                  </div>
-                                </form>
-                            </div>
-                            <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            </div>
-                        </div>
-                        </div>
+</head>
+
+<body>
+  {% include "snippets/sidebar.html" %}
+  <div class="page">
+    <!-- navbar-->
+    {% include "snippets/header.html" %}
+
+    <!-- Statistics Section-->
+    <section class="statistics">
+      <div class="container-fluid">
+        <div class="row d-flex">
+          <div class="col-lg-1">
+          </div>
+          <div class="col-lg-10">
+            <br>
+            <div class="form-inner">
+              {% if messages %}
+              {% for message in messages %}
+              {% if message.tags == 'success' %}
+              <span id="demoMessage4" class="btn btn-success">{{message}}</span>
+              {% endif %}
+              {% if message.tags == 'error' %}
+              <span id="demoMessage4" class="btn btn-danger">{{message}}</span>
+              {% endif %}
+              {% endfor %}
+              {% endif %}
+              <br>
+
+
+              <!-- Modal -->
+              <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+                aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="exampleModalCenterTitle">Reply To: <span id="reply_name"></span>
+                        Feedback</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
                     </div>
-                    <br><br>
-                    <div class="form-inner">
-                    <div class="logo text-uppercase"><span>Dash</span><strong class="text-primary">Express</strong></div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
-                    <br><br>
+                    <div class="modal-body">
+                      <form class="text-left form-validate" method="POST" action="{% url " FeedbackSaveStudent" %}">
+                        {% csrf_token %}
+                        <input type="hidden" id="reply_id" name="reply_id">
+                        <div class="form-group-material">
+                          <label for="level" class="label-material">FeedBack Reply</label>
+                          <textarea name="feedback_message" id="feedback_message" cols="30" rows="6"
+                            class="form-control" required data-msg='Please State FeedBack Message '></textarea>
+                        </div>
+
+
+                        <div class="form-group text-center">
+                          <input id="reply_feedback" type="submit" value="Post FeedBack" class="btn btn-primary">
+                        </div>
+                      </form>
                     </div>
-                    
-                    <div class="table">
-                        <table class=" table table-striped table-hover">
-                          <thead>
-                            <tr>
-                              <th>ID</th>
-                              <th>Date Sent</th>
-                              <th>Name</th>
-                              <th> FeedBack Message</th>
-                              <th>FeedBack Reply</th>
-                            </tr>
-                          </thead>
-                          <tbody>
-                              {% for feed in feedback_data %}
-                            <tr>
-                              <th scope="row">{{ feed.id }}</th>
-                              <td>{{ feed.created }}</td>
-                              <td>{{ feed.staff_id.admin.first_name }} {{ feed.staff_id.admin.last_name }}</td>
-                              <td>{{ feed.feedback }}</td>
-                              <td>
-                                  {% if feed.feedback_reply == "" %}
-                                    <!-- Button trigger modal -->
-                                    <button type="button" class="btn btn-primary reply_open_modal" data-toggle="modal" data-target="#exampleModalCenter">
-                                        Reply Feedback
-                                    </button>
-                                   {% else %}                                      
-                                    {{ feed.feedback_reply }}
-                                  {% endif %}
-                              </td>
-                            </tr>
-                            {% endfor %}
-                          </tbody>
-                        </table>
-                      </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
                   </div>
                 </div>
-                <div class="col-lg-1">
-                </div>
-            </div>
-            </div>
-        </section>
+              </div>
+              <br><br>
+              <div class="form-inner">
+                <div class="logo text-uppercase"><span>Dash</span><strong class="text-primary">Express</strong></div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+                <br><br>
+              </div>
 
-        {% include "snippets/footer.html" %}
+              <div class="table">
+                <table class=" table table-striped table-hover">
+                  <thead>
+                    <tr>
+                      <th>ID</th>
+                      <th>Date Sent</th>
+                      <th>Name</th>
+                      <th> FeedBack Message</th>
+                      <th>FeedBack Reply</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    {% for feed in feedback_data %}
+                    <tr>
+                      <th scope="row">{{ feed.id }}</th>
+                      <td>{{ feed.created }}</td>
+                      <td>{{ feed.staff_id.admin.first_name }} {{ feed.staff_id.admin.last_name }}</td>
+                      <td>{{ feed.feedback }}</td>
+                      <td>
+                        {% if feed.feedback_reply == "" %}
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-primary reply_open_modal" data-toggle="modal"
+                          data-target="#exampleModalCenter">
+                          Reply Feedback
+                        </button>
+                        {% else %}
+                        {{ feed.feedback_reply }}
+                        {% endif %}
+                      </td>
+                    </tr>
+                    {% endfor %}
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-1">
+          </div>
         </div>
-      <!-- JavaScript files-->
-      <script src="{% static "dashboard/vendor/jquery/jquery.min.js" %}"></script>
-      <script src="{% static "dashboard/vendor/bootstrap/js/bootstrap.bundle.min.js" %}"></script>
-      <script src="{% static "dashboard/vendor/jquery.cookie/jquery.cookie.js" %}"> </script>
-      <script src="{% static "dashboard/js/grasp_mobile_progress_circle-1.0.0.min.js" %}"></script>
-      <script src="{% static "dashboard/vendor/chart.js/Chart.min.js" %}"></script>
-      <script src="{% static "dashboard/vendor/jquery-validation/jquery.validate.min.js" %}"></script>
-      <script src="{% static "dashboard/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js" %}"></script>
-      <script src="{% static "dashboard/js/charts-home.js" %}"></script>
-      <!-- Notifications-->
-      <script src="{% static "dashboard/vendor/messenger-hubspot/build/js/messenger.min.js" %}">   </script>
-      <script src="{% static "dashboard/vendor/messenger-hubspot/build/js/messenger-theme-flat.js" %}">       </script>
-      <script src="{% static "dashboard/js/home-premium.js" %}"> </script>
-      <!-- Main File-->
-      <script src="{% static "dashboard/js/front.js" %}"></script>
-      <script>
-        $(document).ready(function(){
-            $(".reply_open_modal").click(function(){
-                var id = $(this).parents("tr").children("th:eq(0)").text();
-                var name = $(this).parents("tr").children("td:eq(1)").text();
-                console.log(id)
-                console.log(name)
-                $("#reply_id").val(id);
-                $("#reply_name").text(name);
-            });
+      </div>
+    </section>
 
-            $(document).on("click", "#reply_feedback", function(){
+    {% include "snippets/footer.html" %}
+  </div>
+  <!-- JavaScript files-->
+  <script src="{% static " dashboard/vendor/jquery/jquery.min.js" %}"></script>
+  <script src="{% static " dashboard/vendor/bootstrap/js/bootstrap.bundle.min.js" %}"></script>
+  <script src="{% static " dashboard/vendor/jquery.cookie/jquery.cookie.js" %}"> </script>
+  <script src="{% static " dashboard/js/grasp_mobile_progress_circle-1.0.0.min.js" %}"></script>
+  <script src="{% static " dashboard/vendor/chart.js/Chart.min.js" %}"></script>
+  <script src="{% static " dashboard/vendor/jquery-validation/jquery.validate.min.js" %}"></script>
+  <script src="{% static " dashboard/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"
+    %}"></script>
+  <script src="{% static " dashboard/js/charts-home.js" %}"></script>
+  <!-- Notifications-->
+  <script src="{% static " dashboard/vendor/messenger-hubspot/build/js/messenger.min.js" %}">   </script>
+  <script src="{% static " dashboard/vendor/messenger-hubspot/build/js/messenger-theme-flat.js" %}">       </script>
+  <script src="{% static " dashboard/js/home-premium.js" %}"> </script>
+  <!-- Main File-->
+  <script src="{% static " dashboard/js/front.js" %}"></script>
+  <script>
+    $(document).ready(function () {
+      $(".reply_open_modal").click(function () {
+        var id = $(this).parents("tr").children("th:eq(0)").text();
+        var name = $(this).parents("tr").children("td:eq(1)").text();
+        console.log(id)
+        console.log(name)
+        $("#reply_id").val(id);
+        $("#reply_name").text(name);
+      });
 
-                $(this).attr("disabled", "disabled");
-                $(this).text("Sending Feedback Reply..");
+      $(document).on("click", "#reply_feedback", function () {
 
-                var id = $("#reply_id").val();
-                var name = $("#reply_name").val();
-                var message = $("#feedback_message").val();
+        $(this).attr("disabled", "disabled");
+        $(this).text("Sending Feedback Reply..");
 
-                $.ajax({
-                  url: '{% url "StaffFeedbackReply" %}',
-                  type: "POST",
-                  data: {id:id, message:message, name:name},
-                })
-                .done(function(response){
-                  if(response == "True"){
-                    alert("Feedback Reply Sent")
-                  }
-                  else{
-                    alert("Error Sending Feedback Reply")
-                  }
-                  location.reload()
-                })
-                .fail(function(){
-                  alert("Error Sending Feedback Reply")
-                })
-              })
-            })
-    </script>
-    </body>
+        var id = $("#reply_id").val();
+        var name = $("#reply_name").val();
+        var message = $("#feedback_message").val();
+
+        $.ajax({
+          url: '{% url "StaffFeedbackReply" %}',
+          type: "POST",
+          data: { id: id, message: message, name: name },
+        })
+          .done(function (response) {
+            if (response == "True") {
+              alert("Feedback Reply Sent")
+            }
+            else {
+              alert("Error Sending Feedback Reply")
+            }
+            location.reload()
+          })
+          .fail(function () {
+            alert("Error Sending Feedback Reply")
+          })
+      })
+    })
+  </script>
+</body>
+
 </html>
