--- a/templates/admin/staffLeave.html
+++ b/templates/admin/staffLeave.html
@@ -1,132 +1,142 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Bootstrap Dashboard by Bootstrapious.com</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="robots" content="all,follow">
-    <!-- Bootstrap CSS-->
-    <link rel="stylesheet" href="{% static "dashboard/vendor/bootstrap/css/bootstrap.min.css" %}">
-    <!-- Font Awesome CSS-->
-    <link rel="stylesheet" href="{% static "dashboard/vendor/font-awesome/css/font-awesome.min.css" %}">
-    <!-- Fontastic Custom icon font-->
-    <link rel="stylesheet" href="{% static "dashboard/css/fontastic.css" %}">
-    <!-- Google fonts - Roboto -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
-    <!-- jQuery Circle-->
-    <link rel="stylesheet" href="{% static "dashboard/css/grasp_mobile_progress_circle-1.0.0.min.css" %}">
-    <!-- Custom Scrollbar-->
-    <link rel="stylesheet" href="{% static "dashboard/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css" %}">
-    <!-- theme stylesheet-->
-    <link rel="stylesheet" href="{% static "dashboard/css/style.default.premium.css" %}" id="theme-stylesheet">
-    <!-- Custom stylesheet - for your changes-->
-    <link rel="stylesheet" href="{% static "dashboard/css/custom.css" %}">
-    <!-- Favicon-->
-    <link rel="shortcut icon" href="{% static "dashboard/img/favicon.ico" %}">
-    <!-- Tweaks for older IEs--><!--[if lt IE 9]>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Brintschool | Staff Leave</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="robots" content="all,follow">
+  <!-- Bootstrap CSS-->
+  <link rel="stylesheet" href="{% static " dashboard/vendor/bootstrap/css/bootstrap.min.css" %}">
+  <!-- Font Awesome CSS-->
+  <link rel="stylesheet" href="{% static " dashboard/vendor/font-awesome/css/font-awesome.min.css" %}">
+  <!-- Fontastic Custom icon font-->
+  <link rel="stylesheet" href="{% static " dashboard/css/fontastic.css" %}">
+  <!-- Google fonts - Roboto -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
+  <!-- jQuery Circle-->
+  <link rel="stylesheet" href="{% static " dashboard/css/grasp_mobile_progress_circle-1.0.0.min.css" %}">
+  <!-- Custom Scrollbar-->
+  <link rel="stylesheet" href="{% static " dashboard/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css"
+    %}">
+  <!-- theme stylesheet-->
+  <link rel="stylesheet" href="{% static " dashboard/css/style.default.premium.css" %}" id="theme-stylesheet">
+  <!-- Custom stylesheet - for your changes-->
+  <link rel="stylesheet" href="{% static " dashboard/css/custom.css" %}">
+  <!-- Favicon-->
+  <link rel="shortcut icon" href="{% static " dashboard/img/favicon.ico" %}">
+  <!-- Tweaks for older IEs--><!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
-  </head>
-  <body>
-      {% include "snippets/sidebar.html" %}
-        <div class="page">
-        <!-- navbar-->
-        {% include "snippets/header.html" %}
-        
-        <!-- Statistics Section-->
-        <section class="statistics">
-            <div class="container-fluid">
-            <div class="row d-flex">
-                <div class="col-lg-1">
-                </div>
-                <div class="col-lg-10">
-                  <br>
-                  <div class="form-inner">
-                    <div class="logo text-uppercase"><span>Dash</span><strong class="text-primary">Express</strong></div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
-                      {% if messages %}
-                          {% for message in messages %}
-                          {% if message.tags == 'success' %}
-                            <span id="demoMessage4" class="btn btn-success">{{message}}</span>
-                          {% endif %}
-                          {% if message.tags == 'error' %}
-                            <span id="demoMessage4" class="btn btn-danger">{{message}}</span>
-                          {% endif %}
-                          {% endfor %}
-                      {% endif %}
-                    <br>
- 
-                    
-                    <br><br>
-                    <div class="form-inner">
-                    <div class="logo text-uppercase"><span>Dash</span><strong class="text-primary">Express</strong></div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
-                    <br><br>
-                    </div>
-                    
-                    <div class="table">
-                      <table class=" table table-striped table-hover">
-                        <thead>
-                          <tr>
-                            <th>ID</th>
-                            <th>Date Applied</th>
-                            <th>Name</th>
-                            <th> Leave Message</th>
-                            <th>Leave Date</th>
-                            <th>Action</th>
-                          </tr>
-                        </thead>
-                        <tbody>
-                            {% for feed in leave_data %}
-                          <tr>
-                            <th scope="row">{{ feed.id }}</th>
-                            <td>{{ feed.created }}</td>
-                            <td>{{ feed.staff_id.admin.first_name }} {{ feed.staff_id.admin.last_name }}</td>
-                            <td>{{ feed.leave_message }}</td>
-                            <td>{{ feed.leave_date }}</td>
-                            <td>
-                                {% if feed.leave_status == 0 %}
-                                  <!-- Button trigger modal -->
-                                  <a href="{% url "StaffLeaveApprove" leave_id=feed.id %}"><button type="button" class="btn btn-primary" >Approve</button></a>
-                                  <a href="{% url "StaffLeaveDisapprove" leave_id=feed.id %}"><button type="button" class="btn btn-danger">Disapprove</button></a>
-                                  {% elif feed.leave_status == 1 %}
-                                  <a href="{% url "StaffLeaveApprove" leave_id=feed.id %}"><button type="button" class="btn btn-primary" disabled="disabled">Approved</button></a>
-                                 {% else %}                                      
-                                  <a href="{% url "StaffLeaveDisapprove" leave_id=feed.id %}"><button type="button" class="btn btn-danger" disabled="disabled">Disapproved</button></a>
-                                {% endif %}
-                            </td>
-                          </tr>
-                          {% endfor %}
-                        </tbody>
-                      </table>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-1">
-                </div>
-            </div>
-            </div>
-        </section>
+</head>
 
-        {% include "snippets/footer.html" %}
+<body>
+  {% include "snippets/sidebar.html" %}
+  <div class="page">
+    <!-- navbar-->
+    {% include "snippets/header.html" %}
+
+    <!-- Statistics Section-->
+    <section class="statistics">
+      <div class="container-fluid">
+        <div class="row d-flex">
+          <div class="col-lg-1">
+          </div>
+          <div class="col-lg-10">
+            <br>
+            <div class="form-inner">
+              <div class="logo text-uppercase"><span>Brint</span><strong class="text-primary">School</strong></div>
+              <p>online school management platform</p>
+              {% if messages %}
+              {% for message in messages %}
+              {% if message.tags == 'success' %}
+              <span id="demoMessage4" class="btn btn-success">{{message}}</span>
+              {% endif %}
+              {% if message.tags == 'error' %}
+              <span id="demoMessage4" class="btn btn-danger">{{message}}</span>
+              {% endif %}
+              {% endfor %}
+              {% endif %}
+              <br>
+
+
+              <br><br>
+              <div class="form-inner">
+                <div class="logo text-uppercase"><span>Dash</span><strong class="text-primary">Express</strong></div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+                <br><br>
+              </div>
+
+              <div class="table">
+                <table class=" table table-striped table-hover">
+                  <thead>
+                    <tr>
+                      <th>ID</th>
+                      <th>Date Applied</th>
+                      <th>Name</th>
+                      <th> Leave Message</th>
+                      <th>Leave Date</th>
+                      <th>Action</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    {% for feed in leave_data %}
+                    <tr>
+                      <th scope="row">{{ feed.id }}</th>
+                      <td>{{ feed.created }}</td>
+                      <td>{{ feed.staff_id.admin.first_name }} {{ feed.staff_id.admin.last_name }}</td>
+                      <td>{{ feed.leave_message }}</td>
+                      <td>{{ feed.leave_date }}</td>
+                      <td>
+                        {% if feed.leave_status == 0 %}
+                        <!-- Button trigger modal -->
+                        <a href="{% url " StaffLeaveApprove" leave_id=feed.id %}"><button type="button"
+                            class="btn btn-primary">Approve</button></a>
+                        <a href="{% url " StaffLeaveDisapprove" leave_id=feed.id %}"><button type="button"
+                            class="btn btn-danger">Disapprove</button></a>
+                        {% elif feed.leave_status == 1 %}
+                        <a href="{% url " StaffLeaveApprove" leave_id=feed.id %}"><button type="button"
+                            class="btn btn-primary" disabled="disabled">Approved</button></a>
+                        {% else %}
+                        <a href="{% url " StaffLeaveDisapprove" leave_id=feed.id %}"><button type="button"
+                            class="btn btn-danger" disabled="disabled">Disapproved</button></a>
+                        {% endif %}
+                      </td>
+                    </tr>
+                    {% endfor %}
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-1">
+          </div>
         </div>
-      <!-- JavaScript files-->
-      <script src="{% static "dashboard/vendor/jquery/jquery.min.js" %}"></script>
-      <script src="{% static "dashboard/vendor/bootstrap/js/bootstrap.bundle.min.js" %}"></script>
-      <script src="{% static "dashboard/vendor/jquery.cookie/jquery.cookie.js" %}"> </script>
-      <script src="{% static "dashboard/js/grasp_mobile_progress_circle-1.0.0.min.js" %}"></script>
-      <script src="{% static "dashboard/vendor/chart.js/Chart.min.js" %}"></script>
-      <script src="{% static "dashboard/vendor/jquery-validation/jquery.validate.min.js" %}"></script>
-      <script src="{% static "dashboard/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js" %}"></script>
-      <script src="{% static "dashboard/js/charts-home.js" %}"></script>
-      <!-- Notifications-->
-      <script src="{% static "dashboard/vendor/messenger-hubspot/build/js/messenger.min.js" %}">   </script>
-      <script src="{% static "dashboard/vendor/messenger-hubspot/build/js/messenger-theme-flat.js" %}">       </script>
-      <script src="{% static "dashboard/js/home-premium.js" %}"> </script>
-      <!-- Main File-->
-      <script src="{% static "dashboard/js/front.js" %}"></script>
-    </body>
+      </div>
+    </section>
+
+    {% include "snippets/footer.html" %}
+  </div>
+  <!-- JavaScript files-->
+  <script src="{% static " dashboard/vendor/jquery/jquery.min.js" %}"></script>
+  <script src="{% static " dashboard/vendor/bootstrap/js/bootstrap.bundle.min.js" %}"></script>
+  <script src="{% static " dashboard/vendor/jquery.cookie/jquery.cookie.js" %}"> </script>
+  <script src="{% static " dashboard/js/grasp_mobile_progress_circle-1.0.0.min.js" %}"></script>
+  <script src="{% static " dashboard/vendor/chart.js/Chart.min.js" %}"></script>
+  <script src="{% static " dashboard/vendor/jquery-validation/jquery.validate.min.js" %}"></script>
+  <script src="{% static " dashboard/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"
+    %}"></script>
+  <script src="{% static " dashboard/js/charts-home.js" %}"></script>
+  <!-- Notifications-->
+  <script src="{% static " dashboard/vendor/messenger-hubspot/build/js/messenger.min.js" %}">   </script>
+  <script src="{% static " dashboard/vendor/messenger-hubspot/build/js/messenger-theme-flat.js" %}">       </script>
+  <script src="{% static " dashboard/js/home-premium.js" %}"> </script>
+  <!-- Main File-->
+  <script src="{% static " dashboard/js/front.js" %}"></script>
+</body>
+
 </html>
