--- a/templates/admin/studentLeave.html
+++ b/templates/admin/studentLeave.html
@@ -45,9 +45,9 @@
                 <div class="col-lg-10">
                   <br>
                   <div class="form-inner">
-                    <div class="logo text-uppercase"><span>Dash</span><strong class="text-primary">Express</strong></div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
-                      {% if messages %}
+                    <div class="logo text-uppercase"><span>Brint</span><strong class="text-primary">School</strong></div>
+              <p>online school management platform</p>
+                 {% if messages %}
                           {% for message in messages %}
                           {% if message.tags == 'success' %}
                             <span id="demoMessage4" class="btn btn-success">{{message}}</span>
